# rock-paper-scissors

./: Dockerfile  README.md  pyproject.toml
rock_paper_scissors/: rps.py
rps/: __main__.py  rps.py
